created update book list

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="text" id="serial" class="form-control">
             </div>
 
-            <input type="submit" value="Add Book" class="btn btn-primary form-control btn-lg mt-3">
+            <input type="submit" value="Add Book" class="submit btn btn-primary form-control btn-lg mt-3">
 
         </form>
 
@@ -40,6 +40,7 @@
                     <th>Author</th>
                     <th>Serial</th>
                     <th>Delete</th>  <!-- delete button -->
+                    <th>Update</th>  <!-- delete button -->
                 </tr>
             </thead>
             
